app-gitops/app/istio/config/carts-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: carts
  namespace: app
spec:
  hosts:
    - carts
  http:
    - route:
        - destination:
            host: carts.app.svc.cluster.local
            port:
              number: 8080
