app-gitops/app/istio/config/catalog-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: catalog
  namespace: app
spec:
  hosts:
    - catalog
  http:
    - route:
        - destination:
            host: catalog.app.svc.cluster.local
            port:
              number: 8080
