app-gitops/app/istio/config/vault-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: vault-nlb-external
spec:
  hosts:
  - vault.tooling.internal
  location: MESH_EXTERNAL
  ports:
  - number: 8200
    name: http
    protocol: HTTP
  resolution: DNS
